Library/TeamTalk_DLL/TeamTalk.h

    
    typedef WCHAR TTCHAR;
    typedef int TTBOOL;
    typedef char TTCHAR;
    typedef int TTBOOL;
    typedef int INT32;
    typedef long long INT64;
    typedef struct AudioCodec
    {
        Codec nCodec;  
        union
        {
            SpeexCodec speex;
            SpeexVBRCodec speex_vbr;
            OpusCodec opus;
        };
    } AudioCodec;
    typedef struct AudioConfig
    {
        TTBOOL bEnableAGC;
        INT32 nGainLevel;
    } AudioConfig;
    typedef UINT32 UserRights;
    typedef struct ServerProperties
    {
        TTCHAR szServerName[TT_STRLEN];
        TTCHAR szMOTD[TT_STRLEN];
        TTCHAR szMOTDRaw[TT_STRLEN];
        INT32 nMaxUsers;
        INT32 nMaxLoginAttempts;
        INT32 nMaxLoginsPerIPAddress;
        INT32 nMaxVoiceTxPerSecond;
        INT32 nMaxVideoCaptureTxPerSecond;
        INT32 nMaxMediaFileTxPerSecond;
        INT32 nMaxDesktopTxPerSecond;
        INT32 nMaxTotalTxPerSecond;
        TTBOOL bAutoSave;
        INT32 nTcpPort;
        INT32 nUdpPort;
        INT32 nUserTimeout;
        TTCHAR szServerVersion[TT_STRLEN];
        TTCHAR szServerProtocolVersion[TT_STRLEN];
        INT32 nLoginDelayMSec;
        TTCHAR szAccessToken[TT_STRLEN];
    } ServerProperties;
    typedef enum BanType
    {
        BANTYPE_NONE                = 0x00,
        BANTYPE_CHANNEL             = 0x01,
        BANTYPE_IPADDR              = 0x02,
        BANTYPE_USERNAME            = 0x04
    } BanType;
    typedef UINT32 BanTypes;
    typedef struct BannedUser
    {
        TTCHAR szIPAddress[TT_STRLEN]; 
        TTCHAR szChannelPath[TT_STRLEN]; 
        TTCHAR szBanTime[TT_STRLEN];
        TTCHAR szNickname[TT_STRLEN];
        TTCHAR szUsername[TT_STRLEN];
        BanTypes uBanTypes;
    } BannedUser;
    typedef UINT32 UserTypes;
    typedef struct AbusePrevention
    {
        INT32 nCommandsLimit;
        INT32 nCommandsIntervalMSec;
    } AbusePrevention;
    typedef struct UserAccount
    {
        TTCHAR szUsername[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        UserTypes uUserType;
        UserRights uUserRights;
        INT32 nUserData;
        TTCHAR szNote[TT_STRLEN];
        TTCHAR szInitChannel[TT_STRLEN];
        INT32 autoOperatorChannels[TT_CHANNELS_OPERATOR_MAX];
        INT32 nAudioCodecBpsLimit;
        AbusePrevention abusePrevent;
    } UserAccount;
    typedef enum Subscription
    {
        SUBSCRIBE_NONE                    = 0x00000000,
        SUBSCRIBE_USER_MSG                = 0x00000001,
        SUBSCRIBE_CHANNEL_MSG             = 0x00000002,
        SUBSCRIBE_BROADCAST_MSG           = 0x00000004,
        SUBSCRIBE_CUSTOM_MSG              = 0x00000008,
        SUBSCRIBE_VOICE                   = 0x00000010,
        SUBSCRIBE_VIDEOCAPTURE            = 0x00000020,
        SUBSCRIBE_DESKTOP                 = 0x00000040,
        SUBSCRIBE_DESKTOPINPUT            = 0x00000080,
        SUBSCRIBE_MEDIAFILE               = 0x00000100,
        SUBSCRIBE_INTERCEPT_USER_MSG      = 0x00010000,
        SUBSCRIBE_INTERCEPT_CHANNEL_MSG   = 0x00020000,
        SUBSCRIBE_INTERCEPT_CUSTOM_MSG    = 0x00080000,
        SUBSCRIBE_INTERCEPT_VOICE         = 0x00100000,
        SUBSCRIBE_INTERCEPT_VIDEOCAPTURE  = 0x00200000,
        SUBSCRIBE_INTERCEPT_DESKTOP       = 0x00400000,
        SUBSCRIBE_INTERCEPT_MEDIAFILE     = 0x01000000,
    } Subscription;
    typedef UINT32 Subscriptions;
    typedef enum TextMsgType
    {
        MSGTYPE_USER      = 1,
        MSGTYPE_CHANNEL   = 2,
        MSGTYPE_BROADCAST = 3,
        MSGTYPE_CUSTOM    = 4
    } TextMsgType;
    typedef struct TextMessage
    {
        TextMsgType nMsgType;
        INT32 nFromUserID;
        TTCHAR szFromUsername[TT_STRLEN];
        INT32 nToUserID;
        INT32 nChannelID;
        TTCHAR szMessage[TT_STRLEN];
    } TextMessage;
    typedef UINT32 ChannelTypes;
    typedef struct Channel
    {
        INT32 nParentID;
        INT32 nChannelID;
        TTCHAR szName[TT_STRLEN];
        TTCHAR szTopic[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        TTBOOL bPassword;
        ChannelTypes uChannelType;
        INT32 nUserData;
        INT64 nDiskQuota;
        TTCHAR szOpPassword[TT_STRLEN];
        INT32 nMaxUsers;
        AudioCodec audiocodec;
        AudioConfig audiocfg;
        INT32 transmitUsers[TT_TRANSMITUSERS_MAX][2];
        INT32 transmitUsersQueue[TT_TRANSMITQUEUE_MAX];
    } Channel;
    typedef struct ClientKeepAlive
    {
        INT32 nConnectionLostMSec;
        INT32 nTcpKeepAliveIntervalMSec;
        INT32 nUdpKeepAliveIntervalMSec;
        INT32 nUdpKeepAliveRTXMSec;
        INT32 nUdpConnectRTXMSec;
        INT32 nUdpConnectTimeoutMSec;
    } ClientKeepAlive;
    typedef struct ClientStatistics
    {
        INT64 nUdpBytesSent;
        INT64 nUdpBytesRecv;
        INT64 nVoiceBytesSent;
        INT64 nVoiceBytesRecv;
        INT64 nVideoCaptureBytesSent;
        INT64 nVideoCaptureBytesRecv;
        INT64 nMediaFileAudioBytesSent;
        INT64 nMediaFileAudioBytesRecv;
        INT64 nMediaFileVideoBytesSent;
        INT64 nMediaFileVideoBytesRecv;
        INT64 nDesktopBytesSent;
        INT64 nDesktopBytesRecv;
        INT32 nUdpPingTimeMs;
        INT32 nTcpPingTimeMs;
        INT32 nTcpServerSilenceSec;
        INT32 nUdpServerSilenceSec;
    } ClientStatistics;
    typedef VOID TTInstance;
    TEAMTALKDLL_API TTBOOL TT_Connect(IN TTInstance* lpTTInstance,
                                      IN const TTCHAR* szHostAddress, 
                                      IN INT32 nTcpPort, 
                                      IN INT32 nUdpPort, 
                                      IN INT32 nLocalTcpPort, 
                                      IN INT32 nLocalUdpPort,
                                      IN TTBOOL bEncrypted);
    TEAMTALKDLL_API TTBOOL TT_ConnectSysID(IN TTInstance* lpTTInstance,
                                           IN const TTCHAR* szHostAddress, 
                                           IN INT32 nTcpPort, 
                                           IN INT32 nUdpPort, 
                                           IN INT32 nLocalTcpPort, 
                                           IN INT32 nLocalUdpPort,
                                           IN TTBOOL bEncrypted,
                                           IN const TTCHAR* szSystemID);
    TEAMTALKDLL_API TTBOOL TT_ConnectEx(IN TTInstance* lpTTInstance,
                                        IN const TTCHAR* szHostAddress,
                                        IN INT32 nTcpPort,
                                        IN INT32 nUdpPort,
                                        IN const TTCHAR* szBindIPAddr,
                                        IN INT32 nLocalTcpPort,
                                        IN INT32 nLocalUdpPort,
                                        IN TTBOOL bEncrypted);
    TEAMTALKDLL_API TTBOOL TT_Disconnect(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_QueryMaxPayload(IN TTInstance* lpTTInstance,
                                              IN INT32 nUserID);
     TEAMTALKDLL_API TTBOOL TT_GetClientStatistics(IN TTInstance* lpTTInstance,
                                                   OUT ClientStatistics* lpClientStatistics);
    TEAMTALKDLL_API TTBOOL TT_SetClientKeepAlive(IN TTInstance* lpTTInstance,
                                                 IN const ClientKeepAlive* lpClientKeepAlive);
    TEAMTALKDLL_API TTBOOL TT_GetClientKeepAlive(IN TTInstance* lpTTInstance,
                                                 OUT ClientKeepAlive* lpClientKeepAlive);
    TEAMTALKDLL_API INT32 TT_DoPing(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_DoLogin(IN TTInstance* lpTTInstance,
                                     IN const TTCHAR* szNickname, 
                                     IN const TTCHAR* szUsername,
                                     IN const TTCHAR* szPassword);
    TEAMTALKDLL_API INT32 TT_DoLoginEx(IN TTInstance* lpTTInstance,
                                       IN const TTCHAR* szNickname, 
                                       IN const TTCHAR* szUsername,
                                       IN const TTCHAR* szPassword,
                                       IN const TTCHAR* szClientName);
    TEAMTALKDLL_API INT32 TT_DoLogout(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_DoJoinChannel(IN TTInstance* lpTTInstance,
                                           IN const Channel* lpChannel);
    TEAMTALKDLL_API INT32 TT_DoJoinChannelByID(IN TTInstance* lpTTInstance,
                                               IN INT32 nChannelID, 
                                               IN const TTCHAR* szPassword);
    TEAMTALKDLL_API INT32 TT_DoLeaveChannel(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_DoChangeNickname(IN TTInstance* lpTTInstance, 
                                              IN const TTCHAR* szNewNick);
    TEAMTALKDLL_API INT32 TT_DoChangeStatus(IN TTInstance* lpTTInstance,
                                            IN INT32 nStatusMode, 
                                            IN const TTCHAR* szStatusMessage);
    TEAMTALKDLL_API INT32 TT_DoTextMessage(IN TTInstance* lpTTInstance,
                                           IN const TextMessage* lpTextMessage);
    TEAMTALKDLL_API INT32 TT_DoChannelOp(IN TTInstance* lpTTInstance,
                                         IN INT32 nUserID,
                                         IN INT32 nChannelID,
                                         IN TTBOOL bMakeOperator);
    TEAMTALKDLL_API INT32 TT_DoChannelOpEx(IN TTInstance* lpTTInstance,
                                           IN INT32 nUserID,
                                           IN INT32 nChannelID,
                                           IN const TTCHAR* szOpPassword,
                                           IN TTBOOL bMakeOperator);
    TEAMTALKDLL_API INT32 TT_DoKickUser(IN TTInstance* lpTTInstance,
                                        IN INT32 nUserID,
                                        IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoSendFile(IN TTInstance* lpTTInstance,
                                        IN INT32 nChannelID,
                                        IN const TTCHAR* szLocalFilePath);
    TEAMTALKDLL_API INT32 TT_DoRecvFile(IN TTInstance* lpTTInstance,
                                        IN INT32 nChannelID,
                                        IN INT32 nFileID, 
                                        IN const TTCHAR* szLocalFilePath);
    TEAMTALKDLL_API INT32 TT_DoDeleteFile(IN TTInstance* lpTTInstance,
                                          IN INT32 nChannelID,
                                          IN INT32 nFileID);
    TEAMTALKDLL_API INT32 TT_DoSubscribe(IN TTInstance* lpTTInstance,
                                         IN INT32 nUserID, 
                                         IN Subscriptions uSubscriptions);
    TEAMTALKDLL_API INT32 TT_DoUnsubscribe(IN TTInstance* lpTTInstance,
                                           IN INT32 nUserID, 
                                           IN Subscriptions uSubscriptions);
    TEAMTALKDLL_API INT32 TT_DoMakeChannel(IN TTInstance* lpTTInstance,
                                           IN const Channel* lpChannel);
    TEAMTALKDLL_API INT32 TT_DoUpdateChannel(IN TTInstance* lpTTInstance,
                                             IN const Channel* lpChannel);
    TEAMTALKDLL_API INT32 TT_DoRemoveChannel(IN TTInstance* lpTTInstance,
                                             IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoMoveUser(IN TTInstance* lpTTInstance,
                                        IN INT32 nUserID, 
                                        IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoUpdateServer(IN TTInstance* lpTTInstance,
                                            IN const ServerProperties* lpServerProperties);
    TEAMTALKDLL_API INT32 TT_DoListUserAccounts(IN TTInstance* lpTTInstance,
                                                IN INT32 nIndex,
                                                IN INT32 nCount);
    TEAMTALKDLL_API INT32 TT_DoNewUserAccount(IN TTInstance* lpTTInstance,
                                              IN const UserAccount* lpUserAccount);
    TEAMTALKDLL_API INT32 TT_DoDeleteUserAccount(IN TTInstance* lpTTInstance,
                                                 IN const TTCHAR* szUsername);
    TEAMTALKDLL_API INT32 TT_DoBanUser(IN TTInstance* lpTTInstance,
                                       IN INT32 nUserID,
                                       IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoBanUserEx(IN TTInstance* lpTTInstance,
                                         IN INT32 nUserID,
                                         IN BanTypes uBanTypes);
    TEAMTALKDLL_API INT32 TT_DoBan(IN TTInstance* lpTTInstance,
                                   IN const BannedUser* lpBannedUser);